fixed cropping

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,8 +1,7 @@
 section.admin{
+
+  @include clearfix;
   position: relative;
-  border-radius: 10px;
-  background: #111;
-  box-shadow: 0 0 .25em rgba(0,0,0,.5);
   h1{
     font-size: 2em;
     line-height: 1.5em;
@@ -147,16 +146,15 @@ ul#categoryselectlist{
   margin-top: 1em;
 }
 
-#crop-holder{ display: block; }
-#crop-preview{
-  position: absolute;
-  top: 0;
-  right: 0;
-  width:180px; 
-  height:180px;
-  overflow:hidden;
-  border: 3px solid rgba(0,0,0,.5);
-}
+// .crop-holder{ }
+// #crop-preview{
+//   top: 0;
+//   right: 0;
+//   width:180px; 
+//   height:180px;
+//   overflow:hidden;
+//   border: 3px solid rgba(0,0,0,.5);
+// }
 
 
 
